--- a/.github/workflows/server-requirements.yml
+++ b/.github/workflows/server-requirements.yml
@@ -15,13 +15,17 @@ jobs:
 
       - name: Mirrors
         run: |
-          docker pull easytier/easytier:latest
-          docker tag easytier/easytier:latest crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/easytier:latest
-          docker push crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/easytier:latest
+          docker pull mongodb/mongodb-community-server:latest
+          docker tag mongodb/mongodb-community-server:latest crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/mongodb-community-server:latest
+          docker push crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/mongodb-community-server:latest
 
-          docker pull containrrr/watchtower:latest
-          docker tag containrrr/watchtower:latest crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/watchtower:latest
-          docker push crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/watchtower:latest
+          # docker pull easytier/easytier:latest
+          # docker tag easytier/easytier:latest crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/easytier:latest
+          # docker push crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/easytier:latest
+
+          # docker pull containrrr/watchtower:latest
+          # docker tag containrrr/watchtower:latest crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/watchtower:latest
+          # docker push crpi-ofh9eows662r8dot.cn-beijing.personal.cr.aliyuncs.com/mirror6/watchtower:latest
 
           
 
